# ezbeq

./: .coveragerc  .dockerignore  .gitignore  CLAUDE.md  Dockerfile.dev  LICENSE  MANIFEST.in  Pipfile  README.md  agents.md  ezbeq.spec  mkdocs.yml  package.json  pyproject.toml  setup.py
.github/workflows/: claude-code-review.yml  claude.yml  create-app.yaml  test.yaml
docker/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yaml  docker-compose.yaml
docker/scripts/: publish-image  run-local  test-docker-git-info
docs/: ezbeq.md  index.md  requirements.txt  rpi.md  win.md
docs-win/: index.md
examples/: ezbeq_10x10.yml  ezbeq_10x10_custom.yml  ezbeq_10x10_xo.yml  ezbeq_2x4_custom.yml  ezbeq_4x10.yml  ezbeq_camilladsp.yml  ezbeq_camilladsp2.yml  ezbeq_ddrc24.yml  ezbeq_ddrc88.yml  ezbeq_htp1.yml  ezbeq_htx.yml  ezbeq_htx_with-inputs.yml  ezbeq_mc.yml  ezbeq_md.yml  ezbeq_md2.yml  ezbeq_multi.yml  ezbeq_named.yml  ezbeq_qsys.yml  ezbeq_shd.yml
ezbeq/: __init__.py  agents.md  app.py  camilladsp.py  catalogue.py  config.py  device.py  ezbeq.py  htp1.py  iir.py  jriver.py  main.py  minidsp.py  qsys.py
ezbeq/apis/: __init__.py  audiotypes.py  authors.py  catalogue.py  contenttypes.py  device.py  devices.py  diagnostics.py  languages.py  load.py  meta.py  search.py  version.py  whatsnew.py  ws.py  years.py
icons/: icon.icns
tests/: catalogue.json  conftest.py  multi2.yaml  multi3.yaml  multi3_existing_gain.yaml  multi3_existing_gain_partial_filters.yaml  multi3_with_beq.yaml  simple.yaml  single3.yaml  test_api.py  test_camilladsp2_api.py  test_camilladsp3_api.py  test_camilladsp_api.py  test_cdsp_cfg_gen.py  test_minidsp_api.py  test_stub.py  test_version_api.py  test_whats_new_api.py
ui/: .gitignore  agents.md  index.html  package.json  vite.config.js
ui/public/: index.html  site.webmanifest
ui/src/: App.js  App.jsx  index.js  setupProxy.js
ui/src/components/: Catalogue.js  DeviceDisconnectedBanner.jsx  Devices.js  Entry.js  ErrorSnack.js  ErrorSnack.jsx  Filter.js  Footer.js  Gain.js  Header.js  Header.jsx  MultiSelect.js  Slots.js  SuccessSnack.jsx  valueState.js
ui/src/components/levels/: Chart.js  Chart.jsx  Controls.js  Controls.jsx  index.js  index.jsx  streamer.js
ui/src/components/main/: Catalogue.js  Catalogue.jsx  Entry.js  Entry.jsx  Filter.js  Filter.jsx  Footer.jsx  Gain.js  Gain.jsx  MultiSelect.js  MultiSelect.jsx  Search.js  Search.jsx  Slots.js  Slots.jsx  WhatsNew.jsx  index.js  index.jsx
ui/src/components/minidsp/: index.js  index.jsx
ui/src/services/: ezbeq.js  levels.js  state.js  streamer.js  util.js
